dodata swagger dokumentacija za rute: kreiranje i prikaz pojedinačnog recepta
